--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -7,7 +7,7 @@
     align-items: flex-end;
     width: 100%;
     height: 4rem;
-    margin-bottom: 2rem;    
+    margin: 2rem;    
     
 }
 .Nav-Container div {
