--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -3,7 +3,8 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    width: 100%;
+    width: 80%;
+    margin-left: 5%;
     top: 6rem;
 }
 
@@ -12,8 +13,7 @@
     width: 275px;
 }
 
-.education-container h3 {
-    font-size: 3.4vw;
+.education-container h2 {
     font-weight: bolder;
     text-decoration: underline;
 }
