--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -5,11 +5,11 @@
     justify-content: flex-end;
     align-items: flex-start;
     flex-wrap: wrap;
-    width: 100%;
-
+    width: 70%;
+    margin-left:15%;
     position: relative;
     text-align: center;
-    top: 7vh;
+    margin-bottom: -30px;
 }
 
 .projects-container a {
