--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -1,10 +1,11 @@
 
 .education-container {
     display: flex;
+    max-height: 100%;
     justify-content: space-evenly;
     flex-wrap: wrap;
     width: 80%;
-    margin-left: 5%;
+    margin-left: 10%;
     top: 6rem;
 }
 
@@ -16,6 +17,17 @@
 .education-container h2 {
     font-weight: bolder;
     text-decoration: underline;
+    font-size: 1.8rem;
+}
+
+.education-container h3 {
+    font-weight: bolder;
+    text-decoration: underline;
+}
+
+.education-container h4 {
+    font-weight: bold;
+    font-size: 1.2rem;
 }
 
 .education-container h5 {
