--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -5,10 +5,11 @@
     justify-content: flex-end;
     align-items: flex-start;
     flex-wrap: wrap;
-    width: 70%;
-    margin-left:20%;
+    width: 80%;
+    padding-left: 20vw;
     position: relative;
     text-align: center;
+    margin-left: 3%;
     margin-bottom: -20px;
 }
 
