Added title to projects component.

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -13,6 +13,11 @@
     margin-bottom: -20px;
 }
 
+.projects-container h2 {
+    text-align: center;
+    text-decoration: underline;
+}
+
 .projects-container a {
     font-size: 1.1rem;
     margin-left: auto;
