added margin-bottom to projects h1 styling.

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -16,6 +16,7 @@
 .projects-container h2 {
     text-align: center;
     text-decoration: underline;
+    margin-bottom: 25px;
 }
 
 .projects-container a {
