--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -26,6 +26,17 @@
 }
 
 .projects-container div {
-    text-align: left;
-    
+    text-align: left; 
+}
+
+.projects-container p {
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 5px;
+    line-height: 1.35;
+}
+
+.projects-container .project-desc {
+    font-size: 0.9rem;
 }
