--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -23,10 +23,15 @@
 .projects-container a {
     font-size: 1.1rem;
     margin-left: auto;
+    line-height: 1.35;
 }
 
 .projects-container div {
     text-align: left; 
+    margin-bottom: 0;
+    padding-bottom: 0;
+    padding-top: 0;
+    margin-top: 0;
 }
 
 .projects-container p {
@@ -39,4 +44,13 @@
 
 .projects-container .project-desc {
     font-size: 0.9rem;
+}
+
+h5 {
+    font-weight: bold;
+}
+
+.stack {
+    padding-bottom: 5px;
+    font-size: 1.35rem;
 }
