--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
 }
 
 code {
@@ -19,29 +21,26 @@ body {
 }
 
 .wrapper {
-  display: flex;
-  flex-direction: column-reverse;
-  align-content: space-between;
-  margin: 0;
   position: fixed;
-  width:100%;
+  background-color: white;
+  color: black;
   height: 100%;
-  background-color: black;
-  color: whitesmoke;
-
-}
-
-.content-wrapper {
-  position: relative;
- 
-  left: 3%;
+  min-height: 80%;
   width: 100%;
-  padding: 20px 20px 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.footer {
+.bottom {
+  position: absolute;
+  bottom: 10px;
+  max-height: 20%;;
+  min-height: 20%;
   width: 100%;
-  text-align: center;
-  line-height: 0.9;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  align-items: center;
 }
-
