--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -2,39 +2,21 @@
 .education-container {
     display: flex;
     max-height: 100%;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    width: 80%;
-    margin-left: 10%;
-    top: 6rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 90px;
 }
 
-.education-container div {
-    margin: 0 1rem 0 1rem;
-    width: 275px;
-}
-
-.education-container h2 {
-    font-weight: bolder;
+.title-ed {
     text-decoration: underline;
-    font-size: 1.8rem;
+    margin: 0;
+    padding: 0;
+    font-size: 1.5rem;
 }
 
-.education-container h3 {
-    font-weight: bolder;
-    text-decoration: underline;
-}
-
-.education-container h4 {
-    font-weight: bold;
-    font-size: 1.2rem;
-}
-
-.education-container h5 {
- 
-    text-indent: 0.6rem;
-}
-
-.education-container p {
-    text-indent: 1.9rem;
+section {
+    padding-top: 10px;
+    margin-bottom: -20px;
 }
