--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,45 +8,49 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 80%;
+    max-height: 67%;
     /*min-width: 70%; */
     display: flex;
-    margin-left: 8%;
-    margin-right: 20%;
-}
-
-.home-container h1 {
-    padding-left: -2%;
-    font-size: 5vw;
-    text-align: center;
-    margin: 0 0 10px 0;
 
 }
 
-.home-container h2 {
-    text-align: center;
-    font-size: 4vw;
-    margin-bottom: 1rem;
-    line-height: 0.9;
-}
-
-.home-container p {
-    /* text-indent: 1rem; */
-    width: 80%;
-    margin-left: 10%;
-}
-
-.home-container .profile-img {
-    width: 60%;
-    margin-left: 32%;
-    margin-top:20px;
-    padding:0;
-}
-
-.home-container .profile-img img {
+img {
     max-width: 300px;
     width: 60%;
-    padding-bottom: 35px;
     border-radius: 180px;
-    filter: drop-shadow(0px 15px 16px white);
+    filter: drop-shadow(0px 15px 5px whitesmoke);
+    margin-top: -35px;
+}
+
+
+
+.title {
+    margin: -8px;
+    padding: 2px;
+
+
+}
+
+.title-bottom {
+    padding-top: 10px;
+}
+
+#title-container {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-bottom: -15px;
+    /* max-height: 20px; */
+}
+
+.tite-container .title h1 {
+    font-size: 20pt;
+}
+
+p {
+
+    line-height: 17px;
 }
