--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -5,53 +5,14 @@
     justify-content: flex-end;
     align-items: flex-start;
     flex-wrap: wrap;
-    width: 90%;
-    padding-left: 10%;
+    width: 100%;
     position: relative;
     text-align: center;
-    margin-left: 3%;
-    margin-bottom: -20px;
-}
 
-.projects-container h3 {
-    text-align: center;
-    text-decoration: underline;
-    padding-bottom: 10px;
-    margin-bottom: 5px;
-}
-
-.projects-container a {
-    font-size: 1.1rem;
-    margin-left: auto;
-    line-height: 1.15;
-}
-
-.projects-container div {
-    text-align: left; 
-    margin-bottom: 0;
-    padding-bottom: 0;
-    padding-top: 0;
-    margin-top: 0;
-}
-
-.projects-container p {
-    font-size: 1rem;
-    margin: 0;
-    padding: 0;
-    padding-bottom: 5px;
-    line-height: 1.25;
-}
-
-.projects-container .project-desc {
-    font-size: 0.9rem;
-}
-
-.projects-container h5 {
-    font-weight: bold;
-    line-height: 1.05;
 }
 
 .stack {
-    padding-bottom: 5px;
-    font-size: 1.35rem;
+    margin-bottom: -20px;
+    margin-top: -20px;
 }
+
