--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -16,3 +16,9 @@
     margin-top: -20px;
 }
 
+.projects-container .projects-description {
+    line-height: 16px;
+    padding: 0;
+    margin: 0;
+}
+
