Added images to projects, and added contributions.

--- a/src/styles/social.css
+++ b/src/styles/social.css
@@ -16,7 +16,7 @@ p {
 
 .social-container .r-button {
     background-color: gray;
-    color: black;
+    color: white;
     border-radius: 90px;
     padding: 0 7px 0 7px;
     font-size: 7pt;
